# pokemon-tcg-dex

./: .gitignore  Makefile  README.md  TODO.md  compose.yaml  data_config.json  go.mod  go.sum  pyproject.toml
.streamlit/: config.toml
image_embedding_sidecar/: __main__.py  config.py  logger.py  utils.py
image_embedding_sidecar/v1/: api.py  contracts.py  models.py
images/: postgres.dockerfile  tcgdex.dockerfile
internal/databases/migrations/: 000001_init.down.sql  000001_init.up.sql
src/: main.go
src/api/v1/: contracts.go  handlers.go  root.go
src/cmd/: download_images.go  find_similars.go  init_api.go  insert_cards.go  insert_image_embeddings.go  load_sets.go  root.go
src/internal/: config.go  logging.go  sidecar.go
src/internal/databases/migrations/: 000002_add_pgvector.up.sql
src/internal/models/: cards.go  embeddings.go  similar_search.go
src/internal/repositories/: postgres.go
src/internal/repositories/migrations/: 000001_init.up.sql  000002_add_pgvector.down.sql
src/internal/utils/: files.go  network.go  progress_bar.go  string.go
src/models/: cards.go
src/repositories/: postgres.go
src/tools/: data_ingestor.go  resource_fetcher.go
tcgdex_front/: Homepage.py
tcgdex_front/internal/: caching.py
tcgdex_front/internal/repositories/: duckdb_repository.py
tcgdex_front/pages/: Collection.py  Image_Search.py
