[project]
name = "image_embedding_sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "python-multipart>=0.0.17",
    "timm>=1.0.11",
    "uvicorn>=0.32.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.workspace]
# members = ["image_embedding_sidecar"]
