[project]
name = "tcgdex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.3",
    "fastapi>=0.115.5",
    "python-multipart>=0.0.17",
    "streamlit-extras>=0.5.0",
    "streamlit>=1.40.2",
    "timm>=1.0.11",
    "uvicorn>=0.32.1",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["image_embedding_sidecar"]

[tool.uv.workspace]
exclude = ["src"]
# members = ["image_embedding_sidecar"]
